2009-11-12  Calum Benson  <calum@opensolaris>

	* ui/nwam-manager-properties.ui:
	Fix typo in dialog label.

2009-11-12  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/capplet-utils.h:
	* capplet/nwam_env_pref_dialog.c (nwam_env_pref_dialog_init),
	(block_nameservices_signals), (populate_panels_from_env),
	(on_ns_source_clicked), (on_ns_selection_toggled):
	* capplet/nwam_net_conf_panel.c (nwam_net_conf_panel_init),
	(refresh), (apply), (nwam_connection_cell_func),
	(profile_edit_btn_clicked), (edit_profile_name_combo_changed):
	* capplet/nwam_pref_dialog.c (nwam_capplet_dialog_init), (refresh),
	(show_changed_cb), (nwam_capplet_dialog_select_ncu):
	* capplet/nwam_pref_dialog.h:
	* common/nwamui_ncu.c:
	Clean code. Fixed 12604 [RC5] on disabling network connection active
	profile reverts to Automatic
	Fixed refresh doesn't work. Now refresh will force to refresh the
	current notebook page.

2009-11-10  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/main.c (main):
	* configure.in:
	* daemon/main.c (main): Added l10n support

2009-11-09  Lin Ma  <Lin.Ma@Sun.COM>

	* capplet/nwam_conn_conf_ip_panel.c
	(nwam_conn_multi_ipv6_cell_edited_cb):
	Fixed 11018 adding prefix 16 in ipv6 address results in prefix zero
	being added

2009-11-09  malin  <malin@os>

	* configure.in: Bump to 0.99.95.1

2009-11-07  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_daemon.c (dispatch_wifi_scan_events_from_event),
	(nwamd_event_handler), (nwamui_daemon_handle_object_state_event):
	Remove get_ncu_by_device_name, clean code.
	* common/nwamui_ncp.c (nwamui_ncp_init):
	Missed the init prio group info which break connect status dialog.
	* common/nwamui_ncu.c (nwamui_ncu_get_property):
	Set {dis}connected wifi info in ncu active property if it's a wifi
	link.

2009-11-07  Lin Ma  <Lin.Ma@Sun.COM>

	* common/nwamui_cond.c (nwamui_to_ui_activation_mode),
	(nwamui_from_ui_activation_mode):
	* common/nwamui_cond.h:
	Add mapping function though it is actually unnecessary.