@@ -293,7 +293,7 @@ static void         http_password_button_clicked_cb(GtkButton *button, gpointer 
 
 static void         on_ns_source_clicked(GtkButton *button, gpointer user_data);
 
-static void         on_ns_selection_toggled(GtkToggleButton *togglebutton, gpointer user_data);
+static void         on_ns_selection_clicked(GtkButton *button, gpointer user_data);
 
 static void         on_ns_text_changed(GtkEntry *entry, gpointer  user_data);
     
@@ -512,10 +512,10 @@ nwam_env_pref_dialog_init (NwamEnvPrefDialog *self)
 
     /* Name Services Page Callbacks */
 	g_signal_connect(prv->files_service_cb,
-      "toggled", (GCallback)on_ns_selection_toggled, (gpointer)self);
+      "clicked", (GCallback)on_ns_selection_clicked, (gpointer)self);
 
 	g_signal_connect(prv->dns_service_cb,
-      "toggled", (GCallback)on_ns_selection_toggled, (gpointer)self);
+      "clicked", (GCallback)on_ns_selection_clicked, (gpointer)self);
 	g_signal_connect(prv->dns_config_manual_rb,
       "clicked", (GCallback)on_ns_source_clicked, (gpointer)self);
 	g_signal_connect(prv->dns_config_dhcp_rb,
@@ -527,20 +527,21 @@ nwam_env_pref_dialog_init (NwamEnvPrefDialog *self)
 	g_signal_connect(prv->dns_domain_entry,
       "changed", (GCallback)on_ns_text_changed, (gpointer)self);
 
-    nwamui_util_set_entry_validation(   prv->dns_servers_entry, 
-                    NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST|NWAMUI_ENTRY_VALIDATION_ALLOW_EMPTY,
-                    TRUE );
+    /* Do not grab focus on cancel event. */
+    nwamui_util_set_entry_validation(prv->dns_servers_entry,
+      NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST|NWAMUI_ENTRY_VALIDATION_ALLOW_EMPTY,
+      FALSE);
 
-    nwamui_util_set_entry_validation(   prv->nis_servers_entry,
-                    NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST|NWAMUI_ENTRY_VALIDATION_ALLOW_EMPTY,
-                    TRUE );
+    nwamui_util_set_entry_validation(prv->nis_servers_entry,
+      NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST|NWAMUI_ENTRY_VALIDATION_ALLOW_EMPTY,
+      FALSE);
 
-    nwamui_util_set_entry_validation(   prv->ldap_servers_entry,
-                    NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST|NWAMUI_ENTRY_VALIDATION_ALLOW_EMPTY,
-                    TRUE );
+    nwamui_util_set_entry_validation(prv->ldap_servers_entry,
+      NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST|NWAMUI_ENTRY_VALIDATION_ALLOW_EMPTY,
+      FALSE);
 
 	g_signal_connect(prv->nis_service_cb,
-      "toggled", (GCallback)on_ns_selection_toggled, (gpointer)self);
+      "clicked", (GCallback)on_ns_selection_clicked, (gpointer)self);
 	g_signal_connect(prv->nis_config_manual_rb,
       "clicked", (GCallback)on_ns_source_clicked, (gpointer)self);
 	g_signal_connect(prv->nis_config_dhcp_rb,
@@ -549,7 +550,7 @@ nwam_env_pref_dialog_init (NwamEnvPrefDialog *self)
       "changed", (GCallback)on_ns_text_changed, (gpointer)self);
 
 	g_signal_connect(prv->ldap_service_cb,
-      "toggled", (GCallback)on_ns_selection_toggled, (gpointer)self);
+      "clicked", (GCallback)on_ns_selection_clicked, (gpointer)self);
 	g_signal_connect(prv->ldap_servers_entry,
       "changed", (GCallback)on_ns_text_changed, (gpointer)self);
 
@@ -686,41 +687,41 @@ block_nameservices_signals( NwamEnvPrefDialog* self, gboolean block )
     }
 
     if ( block ) {
-        g_signal_handlers_block_by_func(prv->files_service_cb, (gpointer)on_ns_selection_toggled, (gpointer)self);
+        g_signal_handlers_block_by_func(prv->files_service_cb, (gpointer)on_ns_selection_clicked, (gpointer)self);
 
-        g_signal_handlers_block_by_func(prv->dns_service_cb, (gpointer)on_ns_selection_toggled, (gpointer)self);
+        g_signal_handlers_block_by_func(prv->dns_service_cb, (gpointer)on_ns_selection_clicked, (gpointer)self);
         g_signal_handlers_block_by_func(prv->dns_config_manual_rb, (gpointer)on_ns_source_clicked, (gpointer)self);
         g_signal_handlers_block_by_func(prv->dns_config_dhcp_rb, (gpointer)on_ns_source_clicked, (gpointer)self);
         g_signal_handlers_block_by_func(prv->dns_servers_entry, (gpointer)on_ns_text_changed, (gpointer)self);
         g_signal_handlers_block_by_func(prv->dns_search_entry, (gpointer)on_ns_text_changed, (gpointer)self);
         g_signal_handlers_block_by_func(prv->dns_domain_entry, (gpointer)on_ns_text_changed, (gpointer)self);
 
-        g_signal_handlers_block_by_func(prv->nis_service_cb, (gpointer)on_ns_selection_toggled, (gpointer)self);
+        g_signal_handlers_block_by_func(prv->nis_service_cb, (gpointer)on_ns_selection_clicked, (gpointer)self);
         g_signal_handlers_block_by_func(prv->nis_config_manual_rb, (gpointer)on_ns_source_clicked, (gpointer)self);
         g_signal_handlers_block_by_func(prv->nis_config_dhcp_rb, (gpointer)on_ns_source_clicked, (gpointer)self);
         g_signal_handlers_block_by_func(prv->nis_servers_entry, (gpointer)on_ns_text_changed, (gpointer)self);
 
-        g_signal_handlers_block_by_func(prv->ldap_service_cb, (gpointer)on_ns_selection_toggled, (gpointer)self);
+        g_signal_handlers_block_by_func(prv->ldap_service_cb, (gpointer)on_ns_selection_clicked, (gpointer)self);
         g_signal_handlers_block_by_func(prv->ldap_servers_entry, (gpointer)on_ns_text_changed, (gpointer)self);
 
         g_signal_handlers_block_by_func(prv->default_domain_entry, (gpointer)on_ns_text_changed, (gpointer)self);
     }
     else {
-        g_signal_handlers_unblock_by_func(prv->files_service_cb, (gpointer)on_ns_selection_toggled, (gpointer)self);
+        g_signal_handlers_unblock_by_func(prv->files_service_cb, (gpointer)on_ns_selection_clicked, (gpointer)self);
 
-        g_signal_handlers_unblock_by_func(prv->dns_service_cb, (gpointer)on_ns_selection_toggled, (gpointer)self);
+        g_signal_handlers_unblock_by_func(prv->dns_service_cb, (gpointer)on_ns_selection_clicked, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->dns_config_manual_rb, (gpointer)on_ns_source_clicked, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->dns_config_dhcp_rb, (gpointer)on_ns_source_clicked, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->dns_servers_entry, (gpointer)on_ns_text_changed, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->dns_search_entry, (gpointer)on_ns_text_changed, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->dns_domain_entry, (gpointer)on_ns_text_changed, (gpointer)self);
 
-        g_signal_handlers_unblock_by_func(prv->nis_service_cb, (gpointer)on_ns_selection_toggled, (gpointer)self);
+        g_signal_handlers_unblock_by_func(prv->nis_service_cb, (gpointer)on_ns_selection_clicked, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->nis_config_manual_rb, (gpointer)on_ns_source_clicked, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->nis_config_dhcp_rb, (gpointer)on_ns_source_clicked, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->nis_servers_entry, (gpointer)on_ns_text_changed, (gpointer)self);
 
-        g_signal_handlers_unblock_by_func(prv->ldap_service_cb, (gpointer)on_ns_selection_toggled, (gpointer)self);
+        g_signal_handlers_unblock_by_func(prv->ldap_service_cb, (gpointer)on_ns_selection_clicked, (gpointer)self);
         g_signal_handlers_unblock_by_func(prv->ldap_servers_entry, (gpointer)on_ns_text_changed, (gpointer)self);
 
         g_signal_handlers_unblock_by_func(prv->default_domain_entry, (gpointer)on_ns_text_changed, (gpointer)self);
@@ -940,6 +941,14 @@ populate_panels_from_env( NwamEnvPrefDialog* self, NwamuiEnv* current_env)
     gtk_widget_set_sensitive(GTK_WIDGET(prv->files_service_cb), 
                             ((files)?(num_nameservices > 1):TRUE) );
 
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_domain_entry), FALSE);
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_domain_entry_label), FALSE);
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_search_entry), FALSE);
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_search_entry_label), FALSE);
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_servers_entry), FALSE);
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_servers_entry_label), FALSE);
+    /* Force change button state */
+	gtk_button_clicked(GTK_BUTTON(prv->dns_service_cb));
 	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(prv->dns_service_cb), dns );
     /* If active, then set senstivity based on the number of services,
      * otherwise it's always sensitive.
@@ -1014,6 +1023,12 @@ populate_panels_from_env( NwamEnvPrefDialog* self, NwamuiEnv* current_env)
         g_list_free(dns_search);
     }
 
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_domain_label), FALSE);
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_domain_label_label), FALSE);
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_servers_entry), FALSE);
+    gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_servers_entry_label), FALSE);
+    /* Force change button state */
+	gtk_button_clicked(GTK_BUTTON(prv->nis_service_cb));
 	gtk_toggle_button_set_active(GTK_TOGGLE_BUTTON(prv->nis_service_cb), nis );
     /* If active, then set senstivity based on the number of services,
      * otherwise it's always sensitive.
@@ -1487,11 +1502,11 @@ on_ns_source_clicked(GtkButton *button, gpointer user_data)
 }
 
 static void
-on_ns_selection_toggled(GtkToggleButton *togglebutton, gpointer user_data)
+on_ns_selection_clicked(GtkButton *button, gpointer user_data)
 {
     NwamEnvPrefDialog          *self = NWAM_ENV_PREF_DIALOG(user_data);
 	NwamEnvPrefDialogPrivate   *prv = GET_PRIVATE(user_data);
-    gboolean                    active = gtk_toggle_button_get_active(togglebutton);
+    gboolean                    active = gtk_toggle_button_get_active(GTK_TOGGLE_BUTTON(button));
     GList                      *nameservices = nwamui_env_get_nameservices( prv->selected_env );
     gboolean                    files = FALSE; /* Which service is being actioned */
     gboolean                    dns = FALSE;
@@ -1507,25 +1522,25 @@ on_ns_selection_toggled(GtkToggleButton *togglebutton, gpointer user_data)
     nwamui_env_config_source_t  dns_configsrc;
     nwamui_env_config_source_t  nis_configsrc;
 
-	if ( togglebutton == (GtkToggleButton*)prv->files_service_cb ) {
+	if ( button == (GtkButton*)prv->files_service_cb ) {
         if ( active ) {
             new_service = NWAMUI_ENV_NAMESERVICES_FILES;
         }
         files = TRUE;
     }
-    else if ( togglebutton == (GtkToggleButton*)prv->dns_service_cb ) {
+    else if ( button == (GtkButton*)prv->dns_service_cb ) {
         if ( active ) {
             new_service = NWAMUI_ENV_NAMESERVICES_DNS;
         }
         dns = TRUE;
     }
-    else if ( togglebutton == (GtkToggleButton*)prv->nis_service_cb ) {
+    else if ( button == (GtkButton*)prv->nis_service_cb ) {
         if ( active ) {
             new_service = NWAMUI_ENV_NAMESERVICES_NIS;
         }
         nis = TRUE;
     }
-    else if ( togglebutton == (GtkToggleButton*)prv->ldap_service_cb ) {
+    else if ( button == (GtkButton*)prv->ldap_service_cb ) {
         if ( active ) {
             new_service = NWAMUI_ENV_NAMESERVICES_LDAP;
         }
@@ -1632,21 +1647,25 @@ on_ns_selection_toggled(GtkToggleButton *togglebutton, gpointer user_data)
     entry_sensitive = (dns_active && dns_configsrc == NWAMUI_ENV_CONFIG_SOURCE_MANUAL);
     gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_config_manual_rb), dns_active );
     gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_config_dhcp_rb), dns_active );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_domain_entry), entry_sensitive );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_domain_entry_label), entry_sensitive );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_search_entry), entry_sensitive );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_search_entry_label), entry_sensitive );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_servers_entry), entry_sensitive );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_servers_entry_label), entry_sensitive );
+    if (!dns_active) {
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_domain_entry), entry_sensitive );
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_domain_entry_label), entry_sensitive );
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_search_entry), entry_sensitive );
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_search_entry_label), entry_sensitive );
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_servers_entry), entry_sensitive );
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->dns_servers_entry_label), entry_sensitive );
+    }
 
     /*NIS */
     entry_sensitive = (nis_active && nis_configsrc == NWAMUI_ENV_CONFIG_SOURCE_MANUAL);
     gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_config_manual_rb), nis_active );
     gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_config_dhcp_rb), nis_active );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_servers_entry), entry_sensitive );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_servers_entry_label), entry_sensitive );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_domain_label), entry_sensitive );
-    gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_domain_label_label), entry_sensitive );
+    if (!nis_active) {
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_servers_entry), entry_sensitive );
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_servers_entry_label), entry_sensitive );
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_domain_label), entry_sensitive );
+        gtk_widget_set_sensitive(GTK_WIDGET(prv->nis_domain_label_label), entry_sensitive );
+    }
 
     /* LDAP */
     gtk_widget_set_sensitive(GTK_WIDGET(prv->ldap_servers_entry), ldap_active );
@@ -2068,8 +2087,8 @@ apply(NwamPrefIFace *iface, gpointer user_data)
                 case NWAMUI_ENV_NAMESERVICES_DNS:
                     /* Required */
                     if ( !nwamui_util_validate_text_entry( GTK_WIDGET(prv->dns_servers_entry), gtk_entry_get_text(prv->dns_servers_entry),
-                                                NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST,
-                                                TRUE, TRUE ) ) {
+                        NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST,
+                        TRUE, TRUE ) ) {
                         gtk_widget_grab_focus( GTK_WIDGET(prv->dns_servers_entry) );
 
                         return( FALSE );
@@ -2078,8 +2097,8 @@ apply(NwamPrefIFace *iface, gpointer user_data)
                 case NWAMUI_ENV_NAMESERVICES_NIS:
                     /* Optional */
                     if ( !nwamui_util_validate_text_entry( GTK_WIDGET(prv->nis_servers_entry), gtk_entry_get_text(prv->nis_servers_entry),
-                                                NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST|NWAMUI_ENTRY_VALIDATION_ALLOW_EMPTY,
-                                                TRUE, TRUE ) ) {
+                        NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST|NWAMUI_ENTRY_VALIDATION_ALLOW_EMPTY,
+                        TRUE, TRUE ) ) {
                         gtk_widget_grab_focus( GTK_WIDGET(prv->nis_servers_entry) );
 
                         return( FALSE );
@@ -2089,8 +2108,8 @@ apply(NwamPrefIFace *iface, gpointer user_data)
                 case NWAMUI_ENV_NAMESERVICES_LDAP:
                     /* Required */
                     if ( !nwamui_util_validate_text_entry( GTK_WIDGET(prv->ldap_servers_entry), gtk_entry_get_text(prv->ldap_servers_entry),
-                                                NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST,
-                                                TRUE, TRUE ) ) {
+                        NWAMUI_ENTRY_VALIDATION_IS_V4|NWAMUI_ENTRY_VALIDATION_IS_V6|NWAMUI_ENTRY_VALIDATION_ALLOW_LIST,
+                        TRUE, TRUE ) ) {
                         gtk_widget_grab_focus( GTK_WIDGET(prv->ldap_servers_entry) );
 
                         return( FALSE );
